<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
				 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>be.algielen</groupId>
	<artifactId>RandomPicture</artifactId>
	<packaging>jar</packaging>
	<version>1.6</version>
	
	
	<properties>
		<maven.compiler.source>25</maven.compiler.source>
		<java.version>25</java.version>
		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<mainClass>be.algielen.randompicture.gui.Main</mainClass>
		<javafx.version>25.0.2</javafx.version>
		<javafx.platform>win</javafx.platform>
		<javafx.jmods.path>C:/development/resources/javafx-jmods-25.0.2</javafx.jmods.path>
	</properties>

	<profiles>
		<profile>
			<id>linux</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<javafx.platform>linux</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<javafx.platform>mac</javafx.platform>
			</properties>
		</profile>

		<profile>
			<id>jlink</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.8.1</version>
						<executions>
							<execution>
								<id>copy-runtime-deps</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/deps</outputDirectory>
									<includeScope>runtime</includeScope>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>do-jlink</id>
								<phase>verify</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>jlink</executable>
									<arguments>
										<argument>--output</argument>
										<argument>${project.build.directory}/jlink/${project.artifactId}</argument>
										<argument>--module-path</argument>
										<argument>
											${project.build.directory}/${project.artifactId}-${project.version}.jar${path.separator}${project.build.directory}/deps${path.separator}${javafx.jmods.path}
										</argument>
										<argument>--add-modules</argument>
										<argument>
											randompicture,javafx.controls,javafx.graphics,javafx.media,javafx.web,javafx.fxml,java.logging,java.base,java.desktop,java.xml,jdk.jfr,jdk.unsupported
										</argument>
										<argument>--launcher</argument>
										<argument>randompicture=randompicture/be.algielen.randompicture.gui.MainFX
										</argument>
										<argument>--strip-debug</argument>
										<argument>--no-man-pages</argument>
										<argument>--no-header-files</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>jpackage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>do-jpackage</id>
								<phase>verify</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>jpackage</executable>
									<arguments>
										<argument>--type</argument>
										<argument>app-image</argument>
										<argument>--input</argument>
										<argument>${project.build.directory}/shade</argument>
										<argument>--dest</argument>
										<argument>${project.build.directory}/exe</argument>
										<argument>--name</argument>
										<argument>${project.artifactId}-${project.version}</argument>
										<argument>--main-jar</argument>
										<argument>${project.artifactId}-shaded-${project.version}.jar</argument>
										<argument>--main-class</argument>
										<argument>${mainClass}</argument>
										<argument>--module-path</argument>
										<argument>${javafx.jmods.path}</argument>
										<argument>--add-modules</argument>
										<argument>
											java.base,javafx.controls,javafx.web,javafx.graphics,javafx.media,java.datatransfer,java.desktop,java.scripting,java.xml,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom,javafx.fxml,java.naming,java.sql,jdk.charsets
										</argument>
										<argument>--icon</argument>
										<argument>${project.basedir}/src/main/resources/heavybreathing.ico</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>2.25.4</version>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>be.algielen.randompicture.gui.MainFX</mainClass>
					<launcher>RandomPicture</launcher>
					<jlinkImageName>random-picture</jlinkImageName>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>25</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>false</addClasspath>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>project-classifier</shadedClassifierName>
							<outputFile>target\shade\${project.artifactId}-shaded-${project.version}.jar</outputFile>
							<transformers>
								<transformer implementation=
																 "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainClass}</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.3</version>
			</plugin>
			
			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>